# SocialMediaHackathonTui

./: Cargo.toml  README.md
SocialMediaHack/src/: main.rs
bios/: Alex Bikowski.bio  Brady Phelps.bio  Gerald Yurek.bio  Jude Shreffler.bio
src/: image_view.rs  main.rs
