[package]
name = "SocialMediaHack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20"
cursive-extras = "0.9.3"
cursive_core = "0.3.7"
image = "0.24.5"
itertools = "0.10.5"
open = "4.0.0"
